refactor: migrate repository methods to use Spring Data JDBC and conventions from ZonedDateTime to OffsetDateTime and update repository methods
- Replace ZonedDateTime with OffsetDateTime across all DTOs, models, and services
- Update repository methods to use Spring Data JDBC conventions
- Add custom converter for Timestamp to OffsetDateTime
- Modify schema.sql to include exception_stack_trace column
- Update JSON array parsing to handle empty object case